src/FinancialForce Accounting/objects/codaBankReconciliationLineItem__c.object
<CustomObject>
    <customHelpPage>codahelpbankreconciliationlineitem</customHelpPage>
    <description>Stores bank reconciliation line item details.</description>
    <fields>
        <fullName>BankReconciliation__c</fullName>
        <label>Bank Reconciliation</label>
        <referenceTo>codaBankReconciliation__c</referenceTo>
        <relationshipLabel>Bank Reconciliation Line Items</relationshipLabel>
        <relationshipName>BankReconciliationLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <formula>if(Value__c&gt;0, Value__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentDate__c</fullName>
        <formula>TransactionLineItem__r.Transaction__r.TransactionDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DocumentDescription__c</fullName>
        <formula>TransactionLineItem__r.Transaction__r.DocumentDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentReference__c</fullName>
        <formula>TransactionLineItem__r.Transaction__r.DocumentReference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Line Item</label>
        <referenceTo>codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>Bank Reconciliation Line Items</relationshipLabel>
        <relationshipName>ReconciliationLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransactionType__c</fullName>
        <formula>text(TransactionLineItem__r.Transaction__r.TransactionType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Withdrawal__c</fullName>
        <formula>if(Value__c&lt;0, -Value__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Withdrawal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Bank Reconciliation Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TransactionLineItem__c</columns>
        <columns>DocumentDate__c</columns>
        <columns>DocumentDescription__c</columns>
        <columns>DocumentReference__c</columns>
        <columns>Withdrawal__c</columns>
        <columns>Deposit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Reconciliation Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>